--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -54,6 +54,8 @@
             <button type="submit" class="btn btn-danger" onclick="return confirm('정말 탈퇴 처리하시겠습니까?');">탈퇴 처리</button>
         </form>
 
+        <a th:href="@{/membership/register}" class="btn btn-dark">회원권 등록</a>
+
     </div>
 
 </div>
