feat: 회원권 수정 기능 추가 및 관련 파일 수정/추가
- Membership 도메인 수정
- MembershipController, Service, Mapper 수정 메서드 추가
- /membership/detail.html 수정
- /membership/edit.html 추가

--- a/src/main/resources/templates/membership/detail.html
+++ b/src/main/resources/templates/membership/detail.html
@@ -80,7 +80,7 @@
   <!-- 버튼 -->
   <div class="mt-4 text-end">
     <a href="/membership/list" class="btn btn-secondary">목록으로</a>
-    <a href="/membership/edit" class="btn btn-primary">수정</a>
+    <a th:href="@{'/membership/edit/' + ${membership.membershipId}}" class="btn btn-primary">수정</a>
   </div>
 
 </div>
