--- a/src/main/resources/templates/membership/detail.html
+++ b/src/main/resources/templates/membership/detail.html
@@ -112,6 +112,9 @@
   <div class="mt-4 text-end">
     <a href="/membership/list" class="btn btn-secondary">목록으로</a>
 
+    <a th:href="@{/membership/refund/request(membershipId=${membership.membershipId})}"
+       class="btn btn-danger">환불 요청</a>
+
     <a th:if="${membership.membershipStatus == 1}"
        th:href="@{'/membership/edit/' + ${membership.membershipId}}"
        class="btn btn-primary">수정</a>
