--- a/src/main/resources/templates/membership/detail.html
+++ b/src/main/resources/templates/membership/detail.html
@@ -104,9 +104,58 @@
           </span>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- 환불 내역 -->
+  <div class="card">
+    <div class="card-body">
+      <h5>환불 신청 내역</h5>
+
+      <table class="table table-bordered table-hover text-center align-middle">
+        <thead class="table-dark">
+        <tr>
+          <th>환불번호</th>
+          <th>회원권 번호</th>
+          <th>회원명</th>
+          <th>상태</th>
+          <th>등록일</th>
+          <th>상세</th>
+        </tr>
+        </thead>
+        <tbody>
+
+
+        <!-- 목록 출력 -->
+        <tr th:if="${refundHistory}">
+          <td th:text="${refundHistory.refundId}"></td>
+          <td th:text="${refundHistory.membershipId}"></td>
+          <td th:text="${refundHistory.memberName}"></td>
+          <td>
+            <span class="badge bg-secondary" th:if="${refundHistory.refundStatus == 0}">요청</span>
+            <span class="badge bg-success" th:if="${refundHistory.refundStatus == 1}">승인</span>
+            <span class="badge bg-danger" th:if="${refundHistory.refundStatus == 2}">거절</span>
+          </td>
+          <td th:text="${#temporals.format(refundHistory.requestedAt, 'yyyy-MM-dd')}"></td>
+          <td>
+            <a th:href="@{/membership/refund/detail/{id}(id=${refundId})}"
+               class="btn btn-dark">상세</a>
+          </td>
+        </tr>
+
+
+        <!-- 데이터가 없을 경우 -->
+        <tr th:unless="${refundHistory}">
+          <td colspan="7">등록된 환불 내역이 없습니다.</td>
+        </tr>
+
+        </tbody>
+      </table>
+
 
     </div>
   </div>
+
 
   <!-- 버튼 -->
   <div class="mt-4 text-end">
