refactor: ADMIN 테이블 컬럼명 변경에 따른 관련 코드 수정
- Admin 및 AdminDetails 도메인 클래스 필드명 수정
- 관리자 회원가입, 목록, 수정 화면(signup.html, list.html, edit.html) 반영

--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -26,17 +26,17 @@
 
         <!-- 사용자ID -->
         <div class="mb-3">
-            <label for="userId" class="form-label">사용자 ID</label>
+            <label for="adminLoginId" class="form-label">사용자 ID</label>
             <div class="input-group">
-                <input type="text" th:field="*{userId}" class="form-control" id="userId" readonly>
+                <input type="text" th:field="*{adminLoginId}" class="form-control" id="adminLoginId" readonly>
             </div>
             <div id="userIdCheckMessage" class="form-text mt-1"></div>
         </div>
 
         <!-- 비밀번호 -->
         <div class="mb-3">
-            <label for="password" class="form-label">비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control" id="password" required>
+            <label for="adminPassword" class="form-label">비밀번호</label>
+            <input type="password" th:field="*{adminPassword}" class="form-control" id="adminPassword" required>
         </div>
 
         <!-- 비밀번호 확인 -->
