--- a/src/main/resources/templates/member/edit.html
+++ b/src/main/resources/templates/member/edit.html
@@ -16,8 +16,13 @@
         <input type="hidden" th:field="*{memberId}" />
 
         <div class="mb-3">
-            <label for="name" class="form-label">이름</label>
-            <input type="text" th:field="*{name}" class="form-control" id="name" required disabled>
+            <label for="memberName" class="form-label">이름</label>
+            <input type="text" th:field="*{memberName}" class="form-control" id="memberName" required disabled>
+        </div>
+
+        <div class="mb-3">
+            <label for="memberLoginId" class="form-label">사용자ID</label>
+            <input type="text" th:field="*{memberLoginId}" class="form-control" id="memberLoginId" required disabled>
         </div>
 
         <div class="mb-3">
