--- a/src/main/resources/templates/auth/member_login.html
+++ b/src/main/resources/templates/auth/member_login.html
@@ -21,8 +21,8 @@
 <body>
 
 <div class="login-container">
-    <h3 class="text-center mb-4">관리자 로그인</h3>
-    <form th:action="@{/auth/login}" method="post">
+    <h3 class="text-center mb-4">회원 로그인</h3>
+    <form th:action="@{/auth/member_login}" method="post">
         <div class="mb-3">
             <label for="username" class="form-label">ID</label>
             <input type="text" id="username" name="username" class="form-control" placeholder="아이디를 입력하세요" required>
