--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>회원 목록</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     table {
         width: 100%;
@@ -57,8 +58,7 @@
         <td th:text="${member.phone}"></td>
         <td th:text="${member.gender == 'M' ? '남' : '여'}"></td>
         <td th:text="${member.birthDate}"></td>
-        <td th:text="${member.status == 1 ? '정상'
-                      : (member.status == 2 ? '이용중지' : '탈퇴')}">
+        <td th:text="${member.status == 'NORMAL' ? '정상' : '탈퇴'}">
         </td>
       </tr>
     </tbody>
