--- a/src/main/resources/templates/admin/list.html
+++ b/src/main/resources/templates/admin/list.html
@@ -8,7 +8,7 @@
 <body>
 
 <!-- 상단바 삽입 -->
-<div th:replace="fragments/header :: navbar"></div>
+<div th:replace="fragments/admin_header :: navbar"></div>
 
 <div class="container mt-5">
     <h2>관리자 목록</h2>
