--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -24,6 +24,8 @@
   </style>
 </head>
 <body>
+<div th:replace="fragments/member_header :: navbar"></div>
+
   <h2>헬스장 회원 목록</h2>
 
   <div th:if="${message}">
