--- a/src/main/resources/templates/membership/detail.html
+++ b/src/main/resources/templates/membership/detail.html
@@ -167,6 +167,9 @@
     <a th:if="${membership.membershipStatus == 1}"
        th:href="@{'/membership/edit/' + ${membership.membershipId}}"
        class="btn btn-primary">수정</a>
+
+    <a th:href="@{/membership/suspend/register(membershipId=${membership.membershipId})}"
+      class="btn btn-secondary">정지</a>
   </div>
 
   </div>
