--- a/src/main/resources/templates/membership/detail.html
+++ b/src/main/resources/templates/membership/detail.html
@@ -98,9 +98,9 @@
         <label class="col-sm-2 col-form-label">상태</label>
         <div class="col-sm-10">
           <span class="form-control bg-light" readonly
-                th:text="${membership.membershipStatus == 1 ? '이용중' :
-                          (membership.membershipStatus == 2 ? '정지' :
-                          (membership.membershipStatus == 3 ? '환불' : '종료'))}">
+                th:text="${membership.membershipStatus.name() == 'ACTIVE' ? '이용중' :
+                          (membership.membershipStatus.name() == 'SUSPENDED' ? '정지' :
+                          (membership.membershipStatus.name() == 'REFUND' ? '환불' : '종료'))}">
           </span>
         </div>
       </div>
