--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -36,10 +36,10 @@
             <a th:href="@{/membership/register}" class="btn btn-primary w-100">회원권 등록</a>
         </div>
         <div class="col-md-4">
-            <a th:href="@{/membership/suspensions}" class="btn btn-warning w-100">정지 내역 조회</a>
+            <a th:href="@{/membership/suspend/list}" class="btn btn-warning w-100">정지 내역 조회</a>
         </div>
         <div class="col-md-4">
-            <a th:href="@{/membership/refunds}" class="btn btn-danger w-100">환불 내역 조회</a>
+            <a th:href="@{/membership/refund/list}" class="btn btn-danger w-100">환불 내역 조회</a>
         </div>
     </div>
 
