--- a/src/main/resources/templates/fragments/member_header.html
+++ b/src/main/resources/templates/fragments/member_header.html
@@ -1,7 +1,7 @@
 <!-- templates/fragments/member_header.html -->
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">🏋️ 회원</a>
+        <a class="navbar-brand" th:href="@{/member/mypage}">🏋️ 회원</a>
 
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto">
