fix: admin_header.html 내 연결 링크 수정

--- a/src/main/resources/templates/fragments/admin_header.html
+++ b/src/main/resources/templates/fragments/admin_header.html
@@ -1,7 +1,7 @@
 <!-- templates/fragments/admin_header.html -->
 <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">🏋️ 헬스장 관리자</a>
+        <a class="navbar-brand" th:href="@{/admin/adminPage}">🏋️ 헬스장 관리자</a>
 
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto">
