--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>회원 목록</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 20px;
-    }
-    th, td {
-        padding: 8px 12px;
-        border: 1px solid #ccc;
-        text-align: center;
-    }
-    th {
-        background-color: #f2f2f2;
-    }
-    h2 {
-        text-align: center;
-    }
-  </style>
 </head>
 <body>
-<div th:replace="fragments/member_header :: navbar"></div>
+<div sec:authorize="hasRole('ADMIN')" th:replace="fragments/admin_header :: navbar"></div>
+<div sec:authorize="hasRole('MEMBER')" th:replace="fragments/member_header :: navbar"></div>
 
+<div class="container mt-5">
   <h2>헬스장 회원 목록</h2>
 
   <div th:if="${message}">
@@ -34,8 +19,8 @@
     </script>
   </div>
 
-  <table>
-    <thead>
+  <table class="table table-bordered table-hover text-center align-middle">
+    <thead class="table-dark">
       <tr>
         <th>번호</th>
         <th>이름</th>
@@ -43,9 +28,6 @@
         <th>전화번호</th>
         <th>성별</th>
         <th>생년월일</th>
-        <th>회원권 유형</th>
-        <th>시작일</th>
-        <th>종료일</th>
         <th>상태</th>
       </tr>
     </thead>
@@ -60,12 +42,12 @@
         <td th:text="${member.phone}"></td>
         <td th:text="${member.gender == 'M' ? '남' : '여'}"></td>
         <td th:text="${member.birthDate}"></td>
-        <td th:text="${member.status == 'NORMAL' ? '정상' : '탈퇴'}">
+        <td th:text="${member.status.name() == 'NORMAL' ? '정상' : '탈퇴'}">
         </td>
       </tr>
     </tbody>
   </table>
 
-
+</div>
 </body>
 </html>
