--- a/src/main/resources/templates/membership/list.html
+++ b/src/main/resources/templates/membership/list.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>회원권 목록</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div sec:authorize="hasRole('ADMIN')" th:replace="fragments/admin_header :: navbar"></div>
+<div sec:authorize="hasRole('MEMBER')" th:replace="fragments/member_header :: navbar"></div>
+
 <div class="container mt-5">
     <h2 class="mb-4">회원권 목록</h2>
 
