--- a/src/main/resources/templates/membership/refund/detail.html
+++ b/src/main/resources/templates/membership/refund/detail.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
-  <title>환불 상세 - 관리자</title>
+  <title sec:authorize="hasRole('ADMIN')">[관리자] 환불 상세</title>
+  <title sec:authorize="hasRole('MEMBER')">[회원] 환불 상세</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -76,9 +78,17 @@
     </div>
   </div>
 
-  <!-- 뒤로가기 버튼 -->
-  <div class="mt-4">
-    <a th:href="@{/membership/refund/list}" class="btn btn-secondary">목록으로</a>
+  <!-- 버튼 -->
+  <div class="mt-4" sec:authorize="hasRole('MEMBER')">
+    <a th:href="@{/member/refund/list}" class="btn btn-secondary">목록으로</a>
+  </div>
+
+  <!-- 버튼 -->
+  <div class="mt-4" sec:authorize="hasRole('ADMIN')">
+    <button type="button" class="btn btn-secondary">검토중</button>
+    <button type="button" class="btn btn-secondary">승인</button>
+    <button type="button" class="btn btn-secondary">거절</button>
+    <a th:href="@{/admin/refund/list}" class="btn btn-secondary">목록으로</a>
   </div>
 </div>
 </body>
