--- a/src/main/resources/templates/membership/refund/detail.html
+++ b/src/main/resources/templates/membership/refund/detail.html
@@ -35,7 +35,7 @@
       <p><strong>상태:</strong>
         <span th:switch="${refund.refundStatus.name()}">
           <span th:case="REQUESTED" class="badge bg-warning text-dark">요청됨</span>
-          <span th:case="PENDING" class="badge bg-secondary text-dark">검토중</span>
+          <span th:case="PENDING" class="badge bg-secondary">검토중</span>
           <span th:case="APPROVED" class="badge bg-success">승인</span>
           <span th:case="REJECTED" class="badge bg-danger">반려</span>
         </span>
@@ -61,7 +61,12 @@
         <tbody>
         <tr th:each="log : ${refund.logs}">
           <td th:text="${log.logId}"></td>
-          <td th:text="${log.logType}"></td>
+          <td>
+            <span th:if="${log.logType.name() == 'REQUESTED'}">요청</span>
+            <span th:if="${log.logType.name() == 'PENDING'}">검토중</span>
+            <span th:if="${log.logType.name() == 'APPROVED'}">승인</span>
+            <span th:if="${log.logType.name() == 'REJECTED'}">반려</span>
+          </td>
           <td th:text="${log.logDetail}"></td>
           <td th:text="${#temporals.format(log.performedAt, 'yyyy-MM-dd')}"></td>
           <td th:text="${log.performedByName}"></td>
@@ -85,8 +90,17 @@
 
   <!-- 버튼 -->
   <div class="mt-4" sec:authorize="hasRole('ADMIN')">
-    <button type="button" class="btn btn-secondary">검토중</button>
-    <button type="button" class="btn btn-secondary">승인</button>
+    <form th:if="${refund}"
+          th:action="@{/admin/refund/pending/{id}(id=${refund.refundId})}" method="post">
+      <button type="submit" class="btn btn-secondary"
+              onclick="return confirm('검토중으로 상태 변경 처리하시겠습니까?');">검토중</button>
+    </form>
+
+    <form th:if="${refund}"
+          th:action="@{/admin/refund/approved/{id}(id=${refund.refundId})}" method="post">
+      <button type="submit" class="btn btn-secondary"
+              onclick="return confirm('승인 처리하시겠습니까?');">승인</button>
+    </form>
     <button type="button" class="btn btn-secondary">거절</button>
     <a th:href="@{/admin/refund/list}" class="btn btn-secondary">목록으로</a>
   </div>
